; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_cs.c_csblob_get_platform_binary.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_cs.c_csblob_get_platform_binary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cs_blob = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @csblob_get_platform_binary(%struct.cs_blob* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.cs_blob*, align 8
  store %struct.cs_blob* %0, %struct.cs_blob** %3, align 8
  %4 = load %struct.cs_blob*, %struct.cs_blob** %3, align 8
  %5 = icmp ne %struct.cs_blob* %4, null
  br i1 %5, label %6, label %12

6:                                                ; preds = %1
  %7 = load %struct.cs_blob*, %struct.cs_blob** %3, align 8
  %8 = getelementptr inbounds %struct.cs_blob, %struct.cs_blob* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %6
  store i32 1, i32* %2, align 4
  br label %13

12:                                               ; preds = %6, %1
  store i32 0, i32* %2, align 4
  br label %13

13:                                               ; preds = %12, %11
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
